--- a/style.css
+++ b/style.css
@@ -1,7 +1,29 @@
+body {
+	text-align: center;
+	margin: 20px;
+	border-left: 5px solid #6E2E00;
+	border-right: 5px solid #6E2E00;
+	padding: 5px;
+	background-color: #FFF5AD;
+	font-family: "Verdana";
+	font-size: 14px;
+}
+
+#timeindic {
+	color: #6E2E00;
+	padding: 10px;
+	font-size: 16px;
+}
+
+#title {
+	font-family: "Georgia";
+}
+
 #lyrics {
 	color: gray;
 }
 
 .hi {
 	color: blue;
+	font-size: 16px;
 }
